change margin to padding on button and tab container object to avoid a problem with margins collapsing in IE.

--- a/src/css/crispin/button.css
+++ b/src/css/crispin/button.css
@@ -18,8 +18,8 @@ div.jxButtonContainer {
   position: relative;
   float: left;
 
-  margin: 2px;
-  padding: 0px;
+  margin: 0px;
+  padding: 2px;
   border: none;
 }
 
